--- a/src/main/Calculator.css
+++ b/src/main/Calculator.css
@@ -7,5 +7,5 @@
     /*Template das linhas e colunas*/
     display: grid;
     grid-template-columns: repeat(4, 25%); /*4 colunas com tamnho de 25%*/
-    grid-template-rows: 48px 48px 48px 48px 48px;
+    grid-template-rows: 1fr 48px 48px 48px 48px 48px; /*1fr fragmento: pega todo o espaço restante na tela para display*/
 }
