Adicionando Funcionalidades nos Botões

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,3 +11,22 @@
     border-bottom: var(--border-button);
     outline: none;
 }
+.button:active{
+    background-color: #ccc;
+}
+/*Quando o botão ocupa 2 posições (ex: botão 0)*/
+.button.double{
+    grid-column: span 2;
+}
+.button.triple{
+    grid-column: span 3;
+}
+
+/*Quando o botão for de uma operação*/
+.button.operation{
+    background-color: #fa8231;
+    color: #fff;
+}
+.button.operation:active{
+    background-color: #fa8231cc;
+}
